fix landpage cors url

--- a/landing/index.html
+++ b/landing/index.html
@@ -325,7 +325,7 @@
         });
 
         // API Configuration
-        const API_URL = 'http://localhost:8000';
+        const API_URL = 'https://competeintel-backend-206260282360.southamerica-east1.run.app';
 
         // Fetch and populate categories
         async function loadCategories() {
